# spam-example-pipeline

./: .gitignore  README.md  __init__.py  answers_and_guide.md  config.py  feedback_loop_and_aws_explainer.md  main.py  next_steps_roadmap.md  pipeline_explainer.md  pyproject.toml  retrain_from_feedback.py  review_cli.py  run_all.py  step10_active_learning.py  step11_aws.py  step1_download.py  step2_load_eda.py  step3_clean.py  step4_train.py  step5_evaluate.py  step6_onnx_export.py  step6_step7_deep_questions.md  step6_step7_viva_explainer.md  step7_inference.py  step8_api.py  step9_mlflow.py
data/processed/: test.csv  train.csv  val.csv
mlruns/0/: meta.yaml
mlruns/516436036780334632/: meta.yaml
mlruns/516436036780334632/25510c8bf8c84852b01ef0a4d1645240/: meta.yaml
mlruns/516436036780334632/25510c8bf8c84852b01ef0a4d1645240/artifacts/: tfidf_vectorizer.pkl
mlruns/516436036780334632/25510c8bf8c84852b01ef0a4d1645240/metrics/: onnx_size_kb  test_accuracy  test_f1  test_roc_auc  tfidf_time_s  train_time_s  val_accuracy  val_f1  val_roc_auc  vocab_size
mlruns/516436036780334632/25510c8bf8c84852b01ef0a4d1645240/tags/: mlflow.runName
mlruns/516436036780334632/33763d6a59894fe3a83ccda6d3e73925/: meta.yaml
mlruns/516436036780334632/33763d6a59894fe3a83ccda6d3e73925/artifacts/: spam_classifier.onnx
mlruns/516436036780334632/3eba4ce6087a42f6ab45a5bb8d483084/: meta.yaml
mlruns/516436036780334632/9340f64d009940f0a49c925546b9939d/: meta.yaml
models/: classifier.pkl  spam_classifier.onnx  tfidf_vectorizer.pkl
static/: dashboard.html
(+95 files in other folders)
